[metadata]
name = tssc
author = Red Hat Services
description = Trusted Software Supply Chain (TSSC) python library.
url = https://github.com/rhtconsulting/tssc-python-package
keywords =
  tssc
  Trusted Software Supply Chain
  Red Hat
  Red Hat Services
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE
  COMMITMENT

[tool:pylint]
ignore = version.py
disable = R0801
output-format = colorized

[tool:pytest]
norecursedirs=tests/helpers

[options]
python_requires = >= 3.6
packages = find:
zip_safe: False
install_requires =
  PyYAML
  tabulate
  gitpython
  sh
  jinja2

[options.extras_require]
tests =
  wheel
  pylint
  flake8
  bandit
  pytest
  pytest-cov
  testfixtures
  mock
  codecov
