[metadata]
name = ploigos-step-runner
author = Red Hat Services
description = Ploigos Step Runner (PSR) implemented as a Python library.
url = https://github.com/ploigos/ploigos-step-runner
keywords =
  ploigos
  psr
  Step Runner
  Trusted Software Supply Chain
  Red Hat
  Red Hat Services
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE
  COMMITMENT

[tool:pylint]
ignore = version.py
disable = R0801,R0903
output-format = colorized

[tool:pytest]
norecursedirs=tests/helpers

[options]
python_requires = >= 3.6
package_dir=
  =src
packages = find:
zip_safe: False
install_requires =
  PyYAML
  gitpython
  sh
  jinja2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    psr = ploigos_step_runner.__main__:main

[options.extras_require]
tests =
  wheel
  pylint
  flake8
  bandit
  pytest
  pytest-cov
  testfixtures
  mock
  codecov
